data/derived/comb/progs/unify/prog1283.ml.out
Characters 118-146:
  | Average(v,w) -> ((eval(v,x,y) +. eval(w,x,y))/2.0)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
